I have made changes in color of blog posts

--- a/layout.html
+++ b/layout.html
@@ -12,7 +12,7 @@
         <div class= "parent1" id="p1">
             <div class="child1">
                 <div class="img_blog">
-                    <img src="https://via.placeholder.com/300x400.png/09f/fff%20C/O%20https://placeholder.com/">
+                    <img src="https://via.placeholder.com/150/FFFF00/000000/?text=WebsiteBuilders.com">
                 </div>
                 <div class="p_block">
                     <span>29th, January 2019</span> <br>
@@ -21,7 +21,7 @@
             </div>
             <div class="child1">
                 <div class="img_blog">
-                    <img src="https://via.placeholder.com/300x400.png/09f/fff%20C/O%20https://placeholder.com/">
+                    <img src="https://via.placeholder.com/150/FFFF00/000000/?text=WebsiteBuilders.com">
                 </div>
                 <div class="p_block">
                     <span>29th, January 2019</span> <br>
@@ -30,7 +30,7 @@
             </div>
             <div class="child1">
                 <div class="img_blog">
-                    <img src="https://via.placeholder.com/300x400.png/09f/fff%20C/O%20https://placeholder.com/">
+                    <img src="https://via.placeholder.com/150/FFFF00/000000/?text=WebsiteBuilders.com">
                 </div>
                 <div class="p_block">
                     <span>29th, January 2019</span> <br>
