Made some changes

--- a/layout.html
+++ b/layout.html
@@ -15,7 +15,7 @@
                     <img src="https://via.placeholder.com/150/FFFF00/000000/?text=WebsiteBuilders.com">
                 </div>
                 <div class="p_block">
-                    <span>29th, January 2019</span> <br>
+                    <div><span>29th, January 2019</span> <br></div>
                     <span>Architectural Design</span>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                     <img src="https://via.placeholder.com/150/FFFF00/000000/?text=WebsiteBuilders.com">
                 </div>
                 <div class="p_block">
-                    <span>29th, January 2019</span> <br>
+                    <div><span>29th, January 2019</span> <br></div>
                     <span>Architectural Design</span>
                 </div>
             </div>
@@ -33,7 +33,7 @@
                     <img src="https://via.placeholder.com/150/FFFF00/000000/?text=WebsiteBuilders.com">
                 </div>
                 <div class="p_block">
-                    <span>29th, January 2019</span> <br>
+                    <div><span>29th, January 2019</span> <br></div>
                     <span>Architectural Design</span>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                     <img src="https://via.placeholder.com/300x400.png/09f/fff%20C/O%20https://placeholder.com/">
                 </div>
                 <div class="p1">
-                    <h3>Innovative structure</h3>
+                    <h3>Architectural Design</h3>
                     <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     </span>
                 </div>
@@ -76,7 +76,7 @@
                     <img src="https://via.placeholder.com/300x400.png/09f/fff%20C/O%20https://placeholder.com/">
                 </div>
                 <div class="p1">
-                    <h3>Innovative structure</h3>
+                    <h3>Interior Design</h3>
                     <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     </span>
                 </div>
@@ -86,7 +86,7 @@
                     <img src="https://via.placeholder.com/300x400.png/09f/fff%20C/O%20https://placeholder.com/">
                 </div>
                 <div class="p1">
-                    <h3>Innovative structure</h3>
+                    <h3>Modern Window Design</h3>
                     <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     </span>
                 </div>
@@ -96,7 +96,7 @@
                     <img src="https://via.placeholder.com/300x400.png/09f/fff%20C/O%20https://placeholder.com/">
                 </div>
                 <div class="p1">
-                    <h3>Innovative structure</h3>
+                    <h3>Experts Architect</h3>
                     <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     </span>
                 </div>
@@ -106,7 +106,7 @@
                     <img src="https://via.placeholder.com/300x400.png/09f/fff%20C/O%20https://placeholder.com/">
                 </div>
                 <div class="p1">
-                    <h3>Innovative structure</h3>
+                    <h3>Sofa Design</h3>
                     <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     </span>
                 </div>
